acceptsFirstResponder returns NO for top most Widgets

BridgedContentView takes away focus from |web_contents| when it's
clicked on mouse. So make it not accepts FirstResponder if it's
top most Widget.

Bug: 766027
Change-Id: I12c68139e7d42c91aa1bca1b3485064d67d6823e